--- a/css/style_11.css
+++ b/css/style_11.css
@@ -202,3 +202,44 @@ footer {
 #nextbutton:hover {
   opacity: 1;
 }
+
+.bottom-menu.container {
+  margin: 30px 15%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  background-color: white;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.bottom-menu.container .link {
+  width: 30%;
+  height: 190px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 15px 0px;
+  font-size: 75px;
+  line-height: 68px;
+  text-align: center;
+  text-decoration: none;
+  color: #ddff87;
+  border-radius: 5px;
+  position: relative;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.3) 0%,
+      rgba(0, 0, 0, 0.3) 100%
+    ),
+    url("../images/bg_base.jpg");
+}
+
+.bottom-menu.container .link:hover {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.5) 100%
+    ),
+    url("../images/bg_base.jpg");
+}
